# System_monitor

./: .gitignore  CMakeLists.txt  Readme.md  install-tracker.sh  sysmon-tracker.service
build-daemon/: CMakeCache.txt  Makefile  SystemMonitor  cmake_install.cmake  sysmon-tracker
build-daemon/.qt/: QtDeploySupport.cmake
build-daemon/SystemMonitor_autogen/: deps  moc_predefs.h
build-daemon/SystemMonitor_autogen/RZ4CM6YYJ6/: moc_BatteryStatsTab.cpp.d  moc_LogsTab.cpp.d  moc_MetricsTab.cpp  moc_MetricsTab.cpp.d  moc_ProcessesTab.cpp  moc_ProcessesTab.cpp.d  moc_ScreenTimeTab.cpp.d
build-daemon/SystemMonitor_autogen/UVLADIE3JM/: moc_MainWindow.cpp  moc_MainWindow.cpp.d
src/: MainWindow.cpp  MainWindow.h  main.cpp
src/daemon/: sysmon-tracker.cpp
src/monitors/: BatteryMonitor.cpp  BatteryMonitor.h  BatteryTracker.cpp  BatteryTracker.h  CpuMonitor.cpp  CpuMonitor.h  DiskMonitor.cpp  DiskMonitor.h  EnergyMonitor.cpp  EnergyMonitor.h  MemoryMonitor.cpp  MemoryMonitor.h  NetworkMonitor.cpp  NetworkMonitor.h  ScreenTimeTracker.cpp  ScreenTimeTracker.h
src/widgets/: BatteryStatsTab.cpp  BatteryStatsTab.h  LogsTab.cpp  LogsTab.h  MetricsTab.cpp  MetricsTab.h  ProcessesTab.cpp  ProcessesTab.h  ScreenTimeTab.cpp  ScreenTimeTab.h
